tests/ui/type-alias-impl-trait/nested.stderr
error: item does not constrain `Foo::{opaque#0}`, but has it in its signature
  --> $DIR/nested.rs:10:4
   |
LL | fn bar() -> Bar {
   |    ^^^
   |
   = note: consider moving the opaque type's declaration and defining uses into a separate module
note: this opaque type is in the signature
  --> $DIR/nested.rs:3:12
   |
LL | type Foo = impl std::fmt::Debug;
   |            ^^^^^^^^^^^^^^^^^^^^

error[E0277]: `Bar` doesn't implement `Debug`
  --> $DIR/nested.rs:16:22
   |
LL |     println!("{:?}", bar());
   |                      ^^^^^ `Bar` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for `Bar`
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
